--- a/sw/uiconfig/swriter/ui/indexentry.ui
+++ b/sw/uiconfig/swriter/ui/indexentry.ui
@@ -35,6 +35,11 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-goto-last</property>
   </object>
+  <object class="GtkImage" id="image6">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-refresh</property>
+  </object>
   <object class="GtkDialog" id="IndexEntryDialog">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
@@ -280,18 +285,6 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry" id="entryed">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">●</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">1</property>
-                        <property name="width">2</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkLabel" id="key1ft">
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
@@ -501,8 +494,6 @@
                         <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="has_entry">True</property>
-                        <property name="entry_text_column">0</property>
-                        <property name="id_column">1</property>
                         <child internal-child="entry">
                           <object class="GtkEntry" id="comboboxtext-entry">
                             <property name="sensitive">False</property>
@@ -522,8 +513,6 @@
                         <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="has_entry">True</property>
-                        <property name="entry_text_column">0</property>
-                        <property name="id_column">1</property>
                         <child internal-child="entry">
                           <object class="GtkEntry" id="comboboxtext-entry2">
                             <property name="sensitive">False</property>
@@ -536,6 +525,29 @@
                         <property name="left_attach">1</property>
                         <property name="top_attach">3</property>
                         <property name="width">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="sync">
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Update entry from selection</property>
+                        <property name="image">image6</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">2</property>
+                        <property name="top_attach">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkEntry" id="entryed">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="invisible_char">●</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">1</property>
                       </packing>
                     </child>
                     <child>
