--- a/sw/uiconfig/swriter/ui/gotopagedialog.ui
+++ b/sw/uiconfig/swriter/ui/gotopagedialog.ui
@@ -17,21 +17,6 @@
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="button1">
-                <property name="label">gtk-help</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-                <property name="secondary">True</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkButton" id="ok">
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
@@ -73,6 +58,7 @@
           <object class="GtkGrid" id="grid1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="halign">center</property>
             <property name="border_width">6</property>
             <property name="row_spacing">12</property>
             <property name="column_spacing">12</property>
@@ -94,6 +80,7 @@
               <object class="GtkEntry" id="page">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="width_chars">5</property>
                 <property name="input_purpose">number</property>
               </object>
               <packing>
@@ -105,7 +92,7 @@
               <object class="GtkLabel" id="page_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="hexpand">True</property>
+                <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Page:</property>
                 <property name="use_underline">True</property>
@@ -125,7 +112,6 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="0">button1</action-widget>
       <action-widget response="0">ok</action-widget>
       <action-widget response="0">cancel</action-widget>
     </action-widgets>
