--- a/cui/uiconfig/ui/fontfeaturesdialog.ui
+++ b/cui/uiconfig/ui/fontfeaturesdialog.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="cui">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkDialog" id="FontFeaturesDialog">
@@ -98,7 +98,7 @@
                             <property name="can-focus">False</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <!-- n-columns=1 n-rows=1 -->
+                              <!-- n-columns=2 n-rows=1 -->
                               <object class="GtkGrid" id="contentGrid">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
@@ -106,6 +106,10 @@
                                 <property name="row-spacing">6</property>
                                 <property name="column-spacing">12</property>
                                 <property name="row-homogeneous">True</property>
+                                <property name="column-homogeneous">True</property>
+                                <child>
+                                  <placeholder/>
+                                </child>
                                 <child>
                                   <placeholder/>
                                 </child>
@@ -146,7 +150,7 @@
                               </packing>
                             </child>
                             <child>
-                              <!-- n-columns=1 n-rows=1 -->
+                              <!-- n-columns=2 n-rows=1 -->
                               <object class="GtkGrid" id="stylisticSetsGrid">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
@@ -154,6 +158,10 @@
                                 <property name="row-spacing">6</property>
                                 <property name="column-spacing">12</property>
                                 <property name="row-homogeneous">True</property>
+                                <property name="column-homogeneous">True</property>
+                                <child>
+                                  <placeholder/>
+                                </child>
                                 <child>
                                   <placeholder/>
                                 </child>
@@ -194,7 +202,7 @@
                               </packing>
                             </child>
                             <child>
-                              <!-- n-columns=1 n-rows=1 -->
+                              <!-- n-columns=2 n-rows=1 -->
                               <object class="GtkGrid" id="characterVariantsGrid">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
@@ -202,6 +210,10 @@
                                 <property name="row-spacing">6</property>
                                 <property name="column-spacing">12</property>
                                 <property name="row-homogeneous">True</property>
+                                <property name="column-homogeneous">True</property>
+                                <child>
+                                  <placeholder/>
+                                </child>
                                 <child>
                                   <placeholder/>
                                 </child>
