--- a/cui/uiconfig/ui/colorconfigwin.ui
+++ b/cui/uiconfig/ui/colorconfigwin.ui
@@ -50,6 +50,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -85,6 +86,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -125,6 +127,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -160,6 +163,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -203,6 +207,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -243,6 +248,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -278,6 +284,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -321,6 +328,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -361,6 +369,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -393,6 +402,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -428,6 +438,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -503,6 +514,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -538,6 +550,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -581,6 +594,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -621,6 +635,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -656,6 +671,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -696,6 +712,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -728,6 +745,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -760,6 +778,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -792,6 +811,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -859,6 +879,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -891,6 +912,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -923,6 +945,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -955,6 +978,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -987,6 +1011,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1004,6 +1029,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1036,6 +1062,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1068,6 +1095,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1100,6 +1128,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1132,6 +1161,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1164,6 +1194,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1196,6 +1227,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1246,6 +1278,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1306,6 +1339,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1373,6 +1407,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1405,6 +1440,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1437,6 +1473,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1469,6 +1506,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1501,6 +1539,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1533,6 +1572,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1565,6 +1605,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1632,6 +1673,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1664,6 +1706,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1696,6 +1739,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1728,6 +1772,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1760,6 +1805,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1792,6 +1838,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1824,6 +1871,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1891,6 +1939,7 @@
                 <property name="hexpand">True</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1938,6 +1987,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -1970,6 +2020,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
@@ -2002,6 +2053,7 @@
                 <property name="halign">end</property>
                 <property name="xalign">0</property>
                 <property name="draw-indicator">True</property>
+                <property name="label" translatable="no"></property>
                 <child>
                   <placeholder/>
                 </child>
